<resources>
    <string name="app_name">Money Mapper</string>
    <string name="action_settings">Settings</string>
    <string name="transaction_name_prompt">Transaction Name:</string>
    <string name="title_activity_trans_collection">Add Transactions</string>
    <string name="title_transactions">Transactions</string>
    <string name="expense">Expense</string>
    <string name="bill">Bill</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="income">Income</string>
    <string name="calculate_future_pay">Calculate Future Pay</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="priorty">Priorty</string>
    <string name="button">Button</string>
    <string name="changes">Changes</string>
    <string name="status">Status</string>
    <string name="regularity">Regularity</string>
    <string name="withdraw">Withdraw</string>
    <string name="billed_on">Billed On</string>
    <string name="due_date">Due Date</string>

</resources>
