<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="94dp">

                    <TextView
                        android:id="@+id/bill_detail_name_title"
                        android:layout_width="172dp"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textSize="30sp"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/bill_detail_name_holder"
                        android:layout_width="172dp"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="30sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="94dp">

                    <TextView
                        android:id="@+id/bill_detail_type_title"
                        android:layout_width="172dp"
                        android:layout_height="wrap_content"
                        android:text="@string/type"
                        android:textSize="30sp"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/bill_detail_type_holder"
                        android:layout_width="172dp"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="30sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="94dp">

                    <TextView
                        android:id="@+id/bill_detail_regularity_title"
                        android:layout_width="172dp"
                        android:layout_height="wrap_content"
                        android:text="@string/regularity"
                        android:textSize="30sp"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/bill_detail_regularity_holder"
                        android:layout_width="172dp"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="30sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="94dp">

                    <TextView
                        android:id="@+id/bill_detail_priorty_title"
                        android:layout_width="172dp"
                        android:layout_height="wrap_content"
                        android:text="@string/priorty"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/bill_detail_priorty_holder"
                        android:layout_width="172dp"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="30sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="94dp">

                    <TextView
                        android:id="@+id/bill_detail_withdraw_title"
                        android:layout_width="172dp"
                        android:layout_height="wrap_content"
                        android:text="@string/withdraw"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/bill_detail_withdraw_holder"
                        android:layout_width="172dp"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="30sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="94dp">

                    <TextView
                        android:id="@+id/bill_detail_change_title"
                        android:layout_width="172dp"
                        android:layout_height="wrap_content"
                        android:text="@string/changes"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/bill_detail_change_holder"
                        android:layout_width="172dp"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="30sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="94dp">

                    <TextView
                        android:id="@+id/bill_detail_status_title"
                        android:layout_width="172dp"
                        android:layout_height="wrap_content"
                        android:text="@string/status"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/bill_detail_status_holder"
                        android:layout_width="172dp"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="30sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="94dp">

                    <TextView
                        android:id="@+id/bill_detail_billon_title"
                        android:layout_width="172dp"
                        android:layout_height="wrap_content"
                        android:text="@string/billed_on"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/bill_detail_billon_holder"
                        android:layout_width="172dp"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="30sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="94dp">

                    <TextView
                        android:id="@+id/bill_detail_duedate_title"
                        android:layout_width="172dp"
                        android:layout_height="wrap_content"
                        android:text="@string/due_date"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/bill_detail_duedate_holder"
                        android:layout_width="172dp"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="30sp" />

                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button" />
                </TableRow>


            </TableLayout>

            <Button
                android:id="@+id/editBillButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Edit" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
